--- a/serconf-docker.properties
+++ b/serconf-docker.properties
@@ -1,6 +1,6 @@
-cnmysql: server=localhost;port=3316;database=db_operation;user=root;password=D0ck3r2020#
-cnpostgres: Server=localhost;Port=5442;Database=db_invoice;User Id=postgres;Password=D0ck3r2020#;
-cnmongo: mongodb://localhost:27027
+cnmysql: server=mysql-test;port=3306;database=db_operation;user=root;password=D0ck3r2020#
+cnpostgres: Server=postgres-test;Port=5432;Database=db_invoice;User Id=postgres;Password=D0ck3r2020#;
+cnmongo: mongodb://mongo-test:27017
 databasemongo: db_transaction
-cnsql: Server=localhost,1443;Database=db_security;User Id=sa;Password=D0ck3r2020#;
+cnsql: Server=sql-test,1433;Database=db_security;User Id=sa;Password=D0ck3r2020#;
 enviroment: docker
